# html-table-csv-converter

./: Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.md  create_test  create_test.rs  simple.html  standalone_test.rs  test.html  test_local.rs  test_parser.rs  test_simple.rs
.github/workflows/: release.yml
examples/: test_options.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: lib.rs  main.rs
