[package]
name = "html-table-csv-converter"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = "4.2"
reqwest = { version = "0.11",default-features = false , features = ["rustls-tls","blocking"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false