[package]
name = "html-table-csv-converter"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = "4.2"
ureq = { version = "3.0.12", features = ["rustls","gzip","brotli"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false